cmake_minimum_required(VERSION 3.5)
set(name WhiteboardClient)
project( ${name} C CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ./include)
aux_source_directory(./src dir_src)
add_executable( ${name} ./whiteboard/whiteboard.cpp ${dir_src})
target_link_libraries( ${name} ${OpenCV_LIBS} -lpthread -lm)
