cmake_minimum_required(VERSION 3.5)
set(name Whiteboard)
project( ${name} C CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} ../include )
add_executable( ${name} ./whiteboard.cpp)
target_link_libraries( ${name} ${OpenCV_LIBS} )
